# bird-ticker

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  deploy.md  docker-compose.yml  fly.toml  package-lock.json  package.json  render.yaml
.azure/: config
proxy/: backfill.js  chat-tools.js  package-lock.json  package.json  server.js
proxy/db/: embeddings.js  index.js  migrate.js
proxy/db/migrations/: 001_init.sql  004_drop_prefs_location.sql  007_obs_bucket_stats.sql  010_chat_messages.sql
proxy/predictor/: __smoke__.js  cluster.js  index.js  stats.js
proxy/scripts/: scrape-species-facts.js
public/: index.html  manifest.json  sw.js
public/css/: style.css
public/js/: app.js  scraper.js  storage.js
server-rs/: Cargo.toml  Dockerfile
server-rs/migrations/: 002_azure_ai.sql  003_ticklist.sql  006_obs_week_index.sql  008_obs_lower_latin_idx.sql  009_drop_obs_embedding.sql
server-rs/src/: backfill.rs  chat_tools.rs  config.rs  db.rs  dedupe.rs  llm.rs  main.rs  push.rs
server-rs/src/predictor/: cluster.rs  mod.rs
server-rs/src/routes/: chat.rs  mod.rs  predictions.rs  push.rs
server-rs/src/scrape/: dofbasen.rs  mod.rs  netfugl.rs
