[package]
name = "bird-app"
version = "1.0.0"
edition = "2021"
description = "Rust backend for the Bird Ticker PWA (port of proxy/server.js)"

[[bin]]
name = "bird-app"
path = "src/main.rs"

[dependencies]
# Web framework + async runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "compression-br", "cors", "set-header", "trace"] }

# Postgres (compile-checked queries, built-in pool)
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }

# HTTP client (scraping + LLM), TLS via rustls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# HTML scraping + legacy charset decoding (DOFbasen is ISO-8859-1)
scraper = "0.21"
regex = "1"
encoding_rs = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web Push (VAPID)
web-push = "0.10"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
include_dir = "0.7"
unicode-normalization = "0.1"
